--- a/Riskvalve/Views/Assessment/PrintAssessment.cshtml
+++ b/Riskvalve/Views/Assessment/PrintAssessment.cshtml
@@ -83,8 +83,7 @@
                 <td colspan="2">@assessment.Asset.Manufacturer</td>
                 <td colspan="5">Pneumatic</td>
                 <td colspan="1" class="checkbox">
-                    <input type="checkbox" />
-                    
+                    <input type="checkbox" @(assessment.Asset.Actuation.ToLower() == "pneumatic" ? "checked" : "") />
                 </td>
             </tr>
             <tr>
@@ -92,7 +91,7 @@
                 <td colspan="2">@assessment.Asset.BodyMaterial</td>
                 <td colspan="5">Hydraulic</td>
                 <td colspan="1" class="checkbox">
-                    <input type="checkbox" /> 
+                    <input type="checkbox" @(assessment.Asset.Actuation.ToLower() == "hydraulic" ? "checked" : "") /> 
                 </td>
             </tr>
             <tr>
@@ -112,7 +111,7 @@
                 <td colspan="6" class="table-section">Valve Inspection History</td>
                 <td colspan="5">Manual valve</td>
                 <td colspan="1" class="checkbox">
-                    <input type="checkbox" /> 
+                    <input type="checkbox" @(assessment.Asset.UsageType.ToLower() == "manual valve" ? "checked" : "") /> 
                 </td>
             </tr>
             <!-- Inspection rows -->
@@ -126,7 +125,7 @@
                 <td class="table-section no-transform" colspan="2">Inspection Image</td>
                 <td colspan="5">Auto On-Off Valve</td>
                 <td colspan="1" class="checkbox">
-                    <input type="checkbox" /> 
+                    <input type="checkbox" @(assessment.Asset.UsageType.ToLower() == "auto on-off valve" ? "checked" : "")/> 
                 </td>
             </tr>
             <!-- first inspection/ inspection [0] -->
@@ -145,7 +144,7 @@
                 </td>
                 <td colspan="5">Control Valve</td>
                 <td colspan="1" class="checkbox">
-                    <input type="checkbox" /> 
+                    <input type="checkbox" @(assessment.Asset.UsageType.ToLower() == "control valve" ? "checked" : "")/> 
                 </td>
             </tr>
             } else {
@@ -158,14 +157,14 @@
                     <td rowspan="4" colspan="2"></td>
                     <td colspan="5">Control Valve</td>
                     <td colspan="1" class="checkbox">
-                        <input type="checkbox" /> 
+                        <input type="checkbox" @(assessment.Asset.UsageType.ToLower() == "control valve" ? "checked" : "")/> 
                     </td>
                 </tr>
             }
             <tr>
                 <td colspan="5">PSV/PRV</td>
                 <td colspan="1" class="checkbox">
-                    <input type="checkbox" /> 
+                    <input type="checkbox" @(assessment.Asset.UsageType.ToLower() == "psv/prv" ? "checked" : "")/> 
                 </td>
             </tr>
             <tr>
@@ -174,7 +173,7 @@
             <tr>
                 <td colspan="5">In-service</td>
                 <td colspan="1" class="checkbox">
-                    <input type="checkbox" /> 
+                    <input type="checkbox" @(assessment.Asset.Status.ToLower() == "in-service" ? "checked" : "")/> 
                 </td>
             </tr>
             <!-- second inspection -->
@@ -191,7 +190,7 @@
                 }</td>
                 <td colspan="5">Waiting For Refurbishment</td>
                 <td colspan="1" class="checkbox">
-                    <input type="checkbox" /> 
+                    <input type="checkbox" @(assessment.Asset.Status.ToLower() == "waiting for refurbishment" ? "checked" : "")/> 
                 </td>
             </tr>
             } else {
@@ -204,14 +203,14 @@
                 <td rowspan="2" colspan="2"></td>
                 <td colspan="5">Waiting For Refurbishment</td>
                 <td colspan="1" class="checkbox">
-                    <input type="checkbox" /> 
+                    <input type="checkbox" @(assessment.Asset.Status.ToLower() == "waiting for refurbishment" ? "checked" : "")/> 
                 </td>
             </tr>
             } 
             <tr>
                 <td colspan="5">Spare</td>
                 <td colspan="1" class="checkbox">
-                    <input type="checkbox" /> 
+                    <input type="checkbox" @(assessment.Asset.Status.ToLower() == "spare" ? "checked" : "")/> 
                 </td>
             </tr>
             <!-- loop additional Inspection here -->
