--- a/Riskvalve/Views/Tool/ExportAssessment.cshtml
+++ b/Riskvalve/Views/Tool/ExportAssessment.cshtml
@@ -51,14 +51,14 @@
                                     <th>Parent Equipment No.</th>
                                     <th>Value Type</th>
                                     <th>Parent Equipment Description</th>
-                                    <th>Installation Date (dd/mm/yyyy)</th>
+                                    <th>Installation Date (dd-mm-yyyy)</th>
                                     <th>PID. No.</th>
                                     <th>Valve Type</th>
                                     <th>Size</th>
                                     <th>Class/Rating</th>
-                                    <th>Assessment Date (dd/mm/yyyy)</th>
-                                    <th>Last Inspection Date (dd/mm/yyyy)</th>
-                                    <th>Last Maintenance Date (dd/mm/yyyy)</th>
+                                    <th>Assessment Date (dd-mm-yyyy)</th>
+                                    <th>Last Inspection Date (dd-mm-yyyy)</th>
+                                    <th>Last Maintenance Date (dd-mm-yyyy)</th>
                                     <th>Leakage to atmosphere TP1</th>
                                     <th>Leakage to atmosphere TP2</th>
                                     <th>Leakage to atmosphere TP3</th>
