--- a/Riskvalve/Views/AssetRegister/Asset.cshtml
+++ b/Riskvalve/Views/AssetRegister/Asset.cshtml
@@ -1,11 +1,12 @@
 @{
     ViewData["Title"] = "Asset";
-    var assetList = ViewData["assetList"] as List<AssetModel>;
+    @* var assetList = ViewData["assetList"] as List<AssetModel>; *@
     var platformList = ViewData["platformList"] as List<PlatformModel>;
     var valveTypeList = ViewData["valveTypeList"] as List<ValveTypeModel>;
     var manualOverrideList = ViewData["manualOverrideList"] as List<ManualOverrideModel>;
     var fluidPhaseList = ViewData["FluidPhaseList"] as List<FluidPhaseModel>;
     var toxicOrFlamableFluidList = ViewData["ToxicOrFlamableFluidList"] as List<ToxicOrFlamableFluidModel>;
+    string urlassetdatatable = Url.Action("GetAssetDatatable", "AssetRegister");
 }
 
 <div class="container-fluid">
@@ -31,7 +32,7 @@
                         </div>
                     </div>
                 </div>
-                <table class="table table-bordered datatable" style="width: 100%;">
+                <table id="assetTable" class="table table-bordered" style="width: 100%;">
                     <thead>
                         <tr>
                             <th>No</th>
@@ -48,7 +49,7 @@
                             <th></th>
                         </tr>
                     </thead>
-                    <tbody>
+                    @* <tbody>
                         @{
                             int ctr = 0;
                             if (assetList != null)
@@ -76,6 +77,7 @@
                                 }
                             }
                         }
+                    </tbody> *@
                 </table>
             </div>
         </div>
@@ -87,8 +89,66 @@
 
 @section Scripts {
     <script>
-        initDatatable({
+        @* initDatatable({
             ordering: true,
-        })
+            columnDefs: [
+                {
+                    type: "num", targets: 5
+                },
+                {
+                    type: "num", targets: 6
+                }
+            ]
+        }) *@
+
+        $(document).ready(function () {
+            $('#assetTable').DataTable({
+                "processing": true,
+                "serverSide": true,
+                "order": [1],
+                "ajax": {
+                    "url": "@urlassetdatatable",
+                    "type": "GET",
+                    "datatype": "json",
+                    "data": function (d) {
+                        d.searchValue = $('#assetTable').DataTable().search();
+                        d.sortColumn = $('#assetTable').DataTable().order()[0][0];
+                        d.sortColumnDirection = $('#assetTable').DataTable().order()[0][1];
+                    }
+                },
+                "columns": [
+                    {
+                        "data": null, 
+                        "orderable": false, 
+                        "render": function (data, type, row, meta) { 
+                            return meta.row + 1; 
+                        }
+                    },
+                    { "data": "tagNo" },
+                    { "data": "businessArea" },
+                    { "data": "platform" },
+                    { "data": "valveType" },
+                    { "data": "size" },
+                    { "data": "classRating" },
+                    { "data": "pidNo" },
+                    { "data": "parentEquipmentNo" },
+                    { "data": "parentEquipmentDescription" },
+                    { "data": "serviceFluid" },
+                    {
+                        "data": "id",
+                        "orderable": false,
+                        "render": function (data, type, row) {
+                            return '<button onclick="editAction.apply(this)" class="btn btn-custom-size btn-primary invert btn-with-icon btn-asset-action" attr-mode="view" attr-itemid="' + data + '"><i class="fa-solid fa-pencil"></i>Edit</button>';
+                        }
+                    }
+                ],
+                "layout": {
+                    topStart: null,
+                    topEnd: "search",
+                    bottomStart: ["paging", "pageLength"],
+                    bottomEnd: "info",
+                },
+            });
+        });
     </script>
 }
