--- a/Riskvalve/Views/Shared/ModalAsset.cshtml
+++ b/Riskvalve/Views/Shared/ModalAsset.cshtml
@@ -119,7 +119,7 @@
                             <div class="form-group">
                                 <label for="field-asset-status">Status</label>
                                 @* <input id="field-asset-status" name="status" type="text" class="form-control"
-                                    required /> *@
+                                required /> *@
                                 <select id="field-asset-status" name="status" class="form-control" required>
                                     <option value="In-service">In-service</option>
                                     <option value="Waiting for Refurbishment">Waiting for Refurbishment</option>
@@ -131,7 +131,7 @@
                             <div class="form-group">
                                 <label for="field-asset-usagetype">Usage Type</label>
                                 @* <input id="field-asset-usagetype" name="usagetype" type="text" class="form-control"
-                                    required /> *@
+                                required /> *@
                                 <select id="field-asset-usagetype" name="usagetype" class="form-control" required>
                                     <option value="Manual Valve">Manual Valve</option>
                                     <option value="Auto On-Off Valve">Auto On-Off Valve</option>
@@ -144,7 +144,7 @@
                             <div class="form-group">
                                 <label for="field-asset-actuation">Actuation</label>
                                 @* <input id="field-asset-actuation" name="actuation" type="text" class="form-control"
-                                    required /> *@
+                                required /> *@
                                 <select id="field-asset-actuation" name="actuation" class="form-control" required>
                                     <option value="Pneumatic">Pneumatic</option>
                                     <option value="Hydraulic">Hydraulic</option>
@@ -480,7 +480,12 @@
                             actuation: actuation
                         },
                         success: function (data) {
-                            location.reload();
+                            console.log(data);
+                            if (data.result == 400) {
+                                alert(data.message);
+                            } else {
+                                location.reload();
+                            }
                         }
                     });
                 }
@@ -488,7 +493,7 @@
         });
         $('#btn-asset-modal-delete').click(function () {
             var id = $('#field-asset-id').val();
-            if(confirm('are you sure you want to delete this data?')) {
+            if (confirm('are you sure you want to delete this data?')) {
                 $.ajax({
                     url: '@urldeleteasset',
                     type: 'POST',
